--- a/index.html
+++ b/index.html
@@ -7,9 +7,96 @@
     <title>Responsive-2</title>
     <link rel="shortcut icon" href="Image/fav-icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Faustina&family=Poppins:wght@500&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9e089d520d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <header>
+        <h2 class="nav-h">Akm Azad</h2>
+        <nav>
+            <ul class="nav-link">
+                <li><a href=" ">Home</a></li>
+                <li><a href=" ">Projects</a></li>
+                <li><a href=" ">Contact</a></li>
+                <li><a href=" ">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+        <section class="top-body">
+            <div class="content">
+                <h1 class="title-1">I'M A WEB DEVELOPER </h1>
+                <P>My name is Akm Azad. I'm a web developer! I can help you build a product, feature or website. Look
+                    through some of my work and experience! If you need coded, dont't hesitate to contact me.</P>
+                <h2 class="title-2">LET'S CONNECT</h2>
+                <div class="icon">
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href=""><i class="fa-solid fa-envelope"></i></a>
+                    <a href=""><i class="fa-brands fa-weixin"></i></a>
+                </div>
+            </div>
+            <div class="image">
+                <img src="Image/Azad.png" alt="">
+            </div>
+
+        </section>
+        <section class="M-P">
+            <div class="website">
+                <img src="Image/web-1.jpeg" alt="">
+                <div class="web-content">
+                    <h2>Website One</h2>
+                    <p>This is an easy-to-use to-do list website. The website allows users to create multiple tasks with
+                        varying functions, such as editing, deleting, and marking them as complete. Moreover, the to-do
+                        list will be stored in local storage, so as long as the user doesn't delete it, it won't be
+                        deleted.</p>
+                    <div class="angcor">
+                        <a href="">HTML</a>
+                        <a href="">CSS</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="website">
+
+                <div class="web-content">
+                    <h2>Website One</h2>
+                    <p>This is an easy-to-use to-do list website. The website allows users to create multiple tasks with
+                        varying functions, such as editing, deleting, and marking them as complete. Moreover, the to-do
+                        list will be stored in local storage, so as long as the user doesn't delete it, it won't be
+                        deleted.</p>
+                    <div class="angcor">
+                        <a href="">HTML</a>
+                        <a href="">CSS</a>
+                    </div>
+                </div>
+                <img src="Image/web-2.jpeg" alt="">
+
+            </div>
+            <div class="website">
+                <img src="Image/web-3.jpeg" alt="">
+                <div class="web-content">
+                    <h2>Website One</h2>
+                    <p>This is an easy-to-use to-do list website. The website allows users to create multiple tasks with
+                        varying functions, such as editing, deleting, and marking them as complete. Moreover, the to-do
+                        list will be stored in local storage, so as long as the user doesn't delete it, it won't be
+                        deleted.</p>
+                    <div class="angcor">
+                        <a href="">HTML</a>
+                        <a href="">CSS</a>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+    </main>
 
 </body>
 
