--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Faustina&family=Poppins:wght@500&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9e089d520d.js" crossorigin="anonymous"></script>
 </head>
 
@@ -95,8 +94,87 @@
 
             </div>
 
+
+        </section>
+        <div class="bottom-link">
+            <a href="">SEE MORE PROJECTS</a>
+        </div>
+        <section class="about">
+            <div class="about-content">
+                <div class="about-self">
+                    <h1>About Myself</h1>
+                    <p>1 am a full-stack developer with expertise in UI/UX design, HTML, CSS, JavaScript, React, and
+                        Ruby on
+                        Rails. I am passionate about creating intuitive and visually appealing user interfaces, and I
+                        have a
+                        strong understanding of the latest web development technologies. I am a team player who is
+                        dedicated
+                        to delivering high-quality and a well-engineered website. My experience in both front-end and
+                        back-end technologies allows me to provide end-to-end solutions to complex problems. Look
+                        through
+                        some of my work and experience! If you like what you see and have a project you need coded,
+                        don't
+                        hesitate to contact me.</p>
+                    <h2 class="title-2">LET'S CONNECT</h2>
+                    <div class="icon">
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href=""><i class="fa-solid fa-envelope"></i></a>
+                        <a href=""><i class="fa-brands fa-weixin"></i></a>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="skill-1">
+                        <div>
+                            <p>language</p>
+                        </div>
+                        <div class="skill-font"><i class="fa-solid fa-caret-right fa-rotate-90"></i></div>
+                    </div>
+                    <div class="skill-icon">
+                        <img src="Image/skill-icons_html.svg" alt="">
+                        <img src="Image/logos_css-3.svg" alt="">
+                        <img src="Image/skill-icons_javascript.svg" alt="">
+                    </div>
+                    <div class="skill-1">
+                        <div>
+                            <p>FrameWorks</p>
+                        </div>
+                        <div class="skill-font"><i class="fa-solid fa-caret-right"></i>
+                        </div>
+
+                    </div>
+                    <div class="skill-1">
+                        <div>
+                            <p>Skills</p>
+                        </div>
+                        <div class="skill-font"><i class="fa-solid fa-caret-right"></i>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bottom-part">
+            <div class="bottom-text">
+                <h2>Contact Me</h2>
+                <p>Contact Me If you have an application you are interested in developing, a feature that you need built
+                    or
+                    a project that needs coding. I'd love to help with it.</p>
+                <div class="inputs">
+                    <input type="text" placeholder="Enter Your Name">
+                    <input type="Email" placeholder="Enter Your Email">
+
+                    <textarea name="" id="" placeholder="Enter Your Message Here "></textarea>
+                    <button class="button">Get In Touch</button>
+
+                </div>
+            </div>
+
+
         </section>
     </main>
+
 
 </body>
 
